# crypt

./: .gitignore  Cargo.toml  README.md  dax.crypt  test.txt
libcrypt/: .gitignore  Cargo.toml
libcrypt/src/: chacha.rs  chacha_rng.rs  lib.rs  mersenne_twister.rs
libcrypt/src/stdin_extras/: input.rs  mod.rs  read_hidden.rs
src/: hidden_input.rs  main.rs  test.rs
src/lib/: argparser.rs  base64.rs  chacha.rs  decrypt.rs  encrypt.rs  hex_string.rs  lib.rs  random.rs  read_hidden.rs  thread_pool.rs
src/tests/: tests.rs
